Thu Dec  2 19:28:06 GMT 2010  Colin Watson  <cjwatson@debian.org>

	* src/catman.c (parse_for_sec): Format ARG_MAX - arg_size using %zd.
	* src/manp.c (has_mandir): Cast printf field precisions to int.
	  (create_pathlist): Use %td to format pointer differences.

Thu Dec  2 19:23:36 GMT 2010  Colin Watson  <cjwatson@debian.org>

	* src/man.c (make_display_command): Make sure the returned pipeline
	  is never NULL; this causes crashes later.

Thu Dec  2 12:33:43 GMT 2010  Colin Watson  <cjwatson@debian.org>

	* src/man.c (make_display_command): Don't start a pager if standard
	  output is not a tty (Fedora bug #658132).
	* NEWS: Document this.

Thu Dec  2 00:31:31 GMT 2010  Colin Watson  <cjwatson@debian.org>

	Handle roff named glyphs and perldoc strings in NAME sections
	(Debian bug #601025).

	* src/lexgrog.l (glyphs, perldocs): New arrays.
	  (MAN_NAME): Call newline_found on encountering \& at the start of
	  a line.  Call add_glyph_to_whatis on roff named glyphs, and
	  add_perldoc_to_whatis on perldoc strings.
	  (compare_macro, add_macro_to_whatis, add_glyph_to_whatis,
	  add_perldoc_to_whatis): New functions.
	* NEWS: Document this.

Wed Dec  1 22:24:51 GMT 2010  Colin Watson  <cjwatson@debian.org>

	Improve .so searching (Debian bug #503472).

	* src/Makefile.am (zsoelim_SOURCES): Add manp.c and manp.h.
	* src/zsoelim.l (zsoelim_parse_file): Take manpathlist and
	  parent_path arguments, and save those to pass on to
	  zsoelim_open_file.
	  (try_compressed): New function, split out from zsoelim_open_file.
	  (zsoelim_open_file): Take manpathlist and parent_path arguments.
	  Rearrange search logic as follows: (1) if there is no parent_path,
	  try opening directly; (2) look up filename within each manpath
	  entry, treating filenames without directory parts as full manual
	  page lookups; (3) if there is a parent_path, try opening directly.
	  (zsoelim_stdin): Pass path and manpathlist from input data to
	  zsoelim_open_file and zsoelim_parse_file.